fix horizontal scroll

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -610,4 +610,6 @@ input[name="new_email"]{
      //line-height: 33pt;
     margin-bottom: 125pt;
  }
+::-webkit-scrollbar{width:2px;height:2px;}
+::-webkit-scrollbar-button{width:2px;height:2px;}
 
